# pythonasia

./: .env.example  .gitignore  CNAME  Makefile  README.md  index.html  pyproject.toml  speakers_python-asia-2026.json  submissions_python-asia-2026.json
.github/: dependabot.yml
aid-scholarships/: index.html
app/announcements/: admin.py  apps.py  models.py
app/announcements/migrations/: 0001_initial.py  0002_announcement_modal_size.py  0003_ribboncta.py  0004_buttoncta.py
app/home/: urls.py  views.py
app/pages/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
app/pages/migrations/: 0001_initial.py  0002_alter_page_slug.py  0003_navigationitem.py
app/pages/templatetags/: content_filters.py
app/sponsors/: admin.py  models.py
app/sponsors/migrations/: 0002_alter_sponsor_sponsor_type.py  0003_sponsor_is_visible.py  (+5 more)
code-of-conduct/: index.html
config/: constants.py  context_processors.py  environment.py  settings.py  urls.py
covid-policy/: index.html
data-privacy/: index.html
deploy/: build.sh  start.sh
everyone-who-can-pays/: index.html
merchandise/: index.html
partnership/: index.html
patron-acknowledgment/: index.html
poster-session/: index.html
schedule/: index.html
scripts/: __init__.py  create_test_speakers.py  create_test_sponsors.py
services/: pretalx_service.py
src/styles/: main.css
static/css/: app.css
static/django_tinymce/: admin_tinymce.css
templates/: base.html  opengraph.html
templates/includes/: announcement_modal.html
travel-info/: index.html
volunteers/: index.html
(+29 files in other folders)
